<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/settings_files_and_storage_category_title">
        <Preference
            app:key="session_restore_storage"
            app:title="@string/settings_session_storage_title"
            app:summary="@string/settings_session_storage_summary" />
        <Preference
            app:key="work_directory"
            app:title="@string/settings_work_directory_title"
            app:summary="@string/settings_work_directory_preference_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_display_and_layout_category_title">
        <SwitchPreferenceCompat
            app:key="fullscreen_mode"
            app:title="@string/settings_fullscreen_mode_title"
            app:summary="@string/settings_fullscreen_mode_summary"
            app:defaultValue="true" />
        <ListPreference
            app:key="scaling_mode"
            app:title="@string/settings_scaling_mode_title"
            app:entries="@array/scaling_entries"
            app:entryValues="@array/scaling_values"
            app:defaultValue="full_width"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:key="lcd_mode"
            app:title="@string/settings_lcd_mode_title"
            app:entries="@array/lcd_entries"
            app:entryValues="@array/lcd_values"
            app:defaultValue="high_contrast"
            app:useSimpleSummaryProvider="true" />
        <SeekBarPreference
            app:key="lcd_luminance"
            app:title="@string/lcd_luminance_title"
            app:summary="@string/lcd_luminance_summary"
            app:min="60"
            android:max="120"
            app:defaultValue="100"
            app:showSeekBarValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_keypad_labels_category_title">
        <ListPreference
            app:key="main_key_dynamic_mode"
            app:title="@string/settings_main_key_dynamic_mode_title"
            app:entries="@array/main_key_dynamic_mode_entries"
            app:entryValues="@array/main_key_dynamic_mode_values"
            app:defaultValue="on"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:key="softkey_dynamic_mode"
            app:title="@string/settings_softkey_dynamic_mode_title"
            app:entries="@array/softkey_dynamic_mode_entries"
            app:entryValues="@array/softkey_dynamic_mode_values"
            app:defaultValue="on"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_interaction_category_title">
        <SwitchPreferenceCompat
            app:key="haptic_enabled"
            app:title="@string/settings_haptic_enabled_title"
            app:defaultValue="true" />
        <SwitchPreferenceCompat
            app:key="haptic_hifi_enabled"
            app:title="@string/settings_haptic_hifi_enabled_title"
            app:defaultValue="true"
            app:dependency="haptic_enabled" />
        <SeekBarPreference
            app:key="haptic_intensity"
            app:title="@string/settings_haptic_intensity_title"
            app:min="0"
            android:max="255"
            app:defaultValue="64"
            app:dependency="haptic_enabled"
            app:showSeekBarValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_audio_category_title">
        <SwitchPreferenceCompat
            app:key="beeper_enabled"
            app:title="@string/settings_beeper_enabled_title"
            app:defaultValue="true" />
        <SeekBarPreference
            app:key="beeper_volume"
            app:title="@string/settings_beeper_volume_title"
            app:min="0"
            android:max="100"
            app:defaultValue="20"
            app:dependency="beeper_enabled"
            app:showSeekBarValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_app_behavior_category_title">
        <SwitchPreferenceCompat
            app:key="keep_screen_on"
            app:title="@string/settings_keep_screen_on_title"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="auto_save_minimize"
            app:title="@string/settings_auto_save_minimize_title"
            app:defaultValue="true" />
        <SwitchPreferenceCompat
            app:key="force_close_on_exit"
            app:title="@string/settings_force_close_on_exit_title"
            app:summary="@string/settings_force_close_on_exit_summary"
            app:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_developer_tools_category_title">
        <SwitchPreferenceCompat
            app:key="show_touch_zones"
            app:title="@string/settings_show_touch_zones_title"
            app:defaultValue="false" />
        <Preference
            app:key="factory_reset"
            app:title="@string/settings_factory_reset_title"
            app:summary="@string/settings_factory_reset_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_about_category_title">
        <Preference
            app:key="about_version"
            app:title="@string/about_version_title"
            app:summary="@string/about_version_summary" />
        <Preference
            app:key="view_privacy_policy"
            app:title="@string/about_privacy_policy_title"
            app:summary="@string/about_privacy_policy_summary" />
        <Preference
            app:key="view_gpl_license"
            app:title="@string/about_gpl_license_title"
            app:summary="@string/about_gpl_license_summary" />
        <Preference
            app:key="view_android_source"
            app:title="@string/about_android_source_title"
            app:summary="@string/about_android_source_summary" />
        <Preference
            app:key="view_repo_notices"
            app:title="@string/about_repo_notices_title"
            app:summary="@string/about_repo_notices_summary" />
        <Preference
            app:key="view_android_library_licenses"
            app:title="@string/about_android_library_licenses_title"
            app:summary="@string/about_android_library_licenses_summary" />
        <Preference
            app:key="view_third_party_inventory"
            app:title="@string/about_spdx_inventory_title"
            app:summary="@string/about_spdx_inventory_summary" />
        <Preference
            app:key="visit_gitlab"
            app:title="@string/about_upstream_project_title" />
    </PreferenceCategory>

</PreferenceScreen>
